<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/iv_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/download_image_description"
        android:src="@drawable/ic_baseline_cloud_download_24"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgDownloadOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16"
        android:layout_marginTop="@dimen/size_32"
        android:layout_marginEnd="@dimen/size_16"
        android:layout_marginBottom="@dimen/size_32"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintTop_toBottomOf="@id/iv_download">

        <RadioButton
            android:id="@+id/rbGlide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_16"
            android:text="@string/glide_option"
            android:textSize="@dimen/text_18" />

        <RadioButton
            android:id="@+id/rbLoadApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_16"
            android:text="@string/load_app_option"
            android:textSize="@dimen/text_18" />

        <RadioButton
            android:id="@+id/rbRetrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_16"
            android:text="@string/retrofit_option"
            android:textSize="@dimen/text_18" />
    </RadioGroup>

    <com.udacity.utils.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_64"
        android:layout_margin="@dimen/size_16"
        app:buttonColor="@color/colorPrimary"
        app:buttonText="@string/button_text_download"
        app:circleColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:loadingButtonColor="@color/colorPrimaryDark"
        app:loadingText="@string/button_loading"
        app:textColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>